--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,10 @@ steps:
       DOCKER_BUILDKIT: 1
     settings:
       repo: rluisr/shawty
+      username:
+        from_secret: docker_username
+        password:
+          from_secret: docker_password
       tags: ${DRONE_COMMIT}
     when:
       branch:
